--- a/data/config.json
+++ b/data/config.json
@@ -1,9 +1,7 @@
 {
-  "token": "",
-  "client_id": "454841977121275914",
+  "token": "TOKEN",
   "prefix": "b$",
-  "owner_id": "240458124522160128",
-  "status": "online",
-  "youtube_api_key": "AIzaSyAZRxmYwvVYRtILqRdbTKbGQVaxPJq_5pQ",
-  "admins": ["211649732890722304"]
+  "owner_id": "YOUR ID",
+  "youtube_api_key": "YOUTUBE API KEY V3",
+  "admins": ["ADMIN ID1"]
 }
